<resources>
    <string name="app_name">PaySkyTask</string>
    <string name="label_add_card_details">Add Card Details</string>
    <string name="label_card_number">Card Number</string>
    <string name="label_card_holder_name">Card Holder Name</string>
    <string name="label_expiration_date">MM/YY</string>
    <string name="label_cvv">CVV</string>
    <string name="label_add_card">ADD CARD</string>
    <string name="msg_card_number_error">Card number must be 16 digits</string>
    <string name="msg_card_holder_error">Card Holder mustn\'t be empty</string>
    <string name="msg_expire_date">expire date is not valid</string>
    <string name="msg_cvv_error">cvv must be 3 digit</string>
    <string name="msg_some_thing_wrong">some thing went wrong</string>
    <string name="msg_no_internet_conection">No Internet Connection</string>
    <string name="msg_card_is_add">Card is added successfully</string>
    <string name="msg_some_thing_wrong_add_new_card">some thing went wrong.\nplease add new card </string>
    <string name="label_retry">Retry</string>
    <string name="add_balance">Add Balance</string>
    <string name="remove_card">Remove Card</string>
    <string name="label_confirm_delete_card">Confirmation</string>
    <string name="msg_confirm_delete_card">Are you sure you want to delete this card?</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">CANCEL</string>
    <string name="label_balance">balance</string>
    <string name="label_expiration_date_text">Expire Date</string>
    <string name="label_add_recharge_amount">Add Recharge Amount</string>
    <string name="recharge_amount_hint">enter amount in range 10.00 EGP to 9,999.00 EGP</string>
    <string name="label_recharge">Recharge</string>
    <string name="msg_failed_to_add_amount">failed to add amount, please try again</string>
    <string name="msg_amount_added">Amount Added Successfully</string>
</resources>