<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/label_add_card_details"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_marginTop="15dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCardNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"
            android:hint="@string/label_card_number"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:inputType="number"
            android:digits="0123456789"
            android:maxLength="16"
            app:layout_constraintEnd_toStartOf="@id/ivLogo" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="@id/etCardNumber"
            app:layout_constraintBottom_toBottomOf="@id/etCardNumber"
            app:layout_constraintStart_toEndOf="@id/etCardNumber"
            android:src="@drawable/ic_credit_card"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@id/ivScan" />

        <ImageView
            android:id="@+id/ivScan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="@id/etCardNumber"
            app:layout_constraintBottom_toBottomOf="@id/etCardNumber"
            app:layout_constraintStart_toEndOf="@id/ivLogo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_scan"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCardHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="5"
            android:hint="@string/label_card_holder_name"
            app:layout_constraintTop_toBottomOf="@id/etCardNumber"
            app:layout_constraintStart_toStartOf="@id/etCardNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="20dp"
            android:background="@null" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etExpiration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/label_expiration_date"
            app:layout_constraintTop_toBottomOf="@id/etCardHolder"
            app:layout_constraintStart_toStartOf="@id/etCardNumber"
            app:layout_constraintEnd_toStartOf="@id/etCvv"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:layout_marginEnd="10dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/label_cvv"
            android:background="@null"
            app:layout_constraintTop_toTopOf="@id/etExpiration"
            app:layout_constraintBottom_toBottomOf="@id/etExpiration"
            app:layout_constraintStart_toEndOf="@id/etExpiration"
            app:layout_constraintEnd_toEndOf="parent" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etExpiration"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="@id/etCardNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:textColor="#ff0000"/>

        <com.wonderkiln.camerakit.CameraView
            android:id="@+id/viewScan"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/tvError"
            app:layout_constraintBottom_toTopOf="@id/btnAddCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintVertical_bias="0.0"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/tvError"
            app:layout_constraintBottom_toTopOf="@id/btnAddCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintVertical_bias="0.0"
            android:visibility="gone"
            android:background="@null"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/label_add_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewScan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminateTint="?attr/colorPrimary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>